--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,7 @@
 extends layout
 
 block content
-	form(method="POST", target="./")
-		input(type="text", name="query" value="君が代")
-		input(type="hidden", name="mode" value="input")
-		input(type="submit", value="search")
-	p= musicTitle 
+	p= searchWord 
 	ul
-		each c in categoriesList
-			li= c.title
+		each r in result
+			li= r
