--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
   p#musicTitle= musicTitle 
+  div#youtube
 
 block scripts
   script(src='http://code.jquery.com/jquery-2.0.0.min.js')
