--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,16 @@ ul {
   padding: 0 0 0 30px;
 }
 
+li:hover {
+  font-weight: bold;
+}
+
 #musicTitle {
   float: left;
+}
+
+#youtube {
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
 }
