react-dshelf beta

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,8 @@
 extends layout
 
 block content
-  p#musicTitle= musicTitle 
-  div#youtube
+  div#content
 
 block scripts
-  script(src='http://code.jquery.com/jquery-2.0.0.min.js')
-  script(src='javascripts/request.js')
+  link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css", rel="stylesheet" integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous")
+  script(src='javascripts/main.js')
